added wind & other summaries to xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,17 @@
         android:textSize="120sp"
         android:textIsSelectable="false" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wind ?mph from ###"
+        android:id="@+id/windValue"
+        android:layout_marginTop="5dp"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:layout_alignBottom="@+id/temperatureLabel"
+        android:layout_centerHorizontal="true"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/temperatureLabel"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:weightSum="100"
         android:id="@+id/linearLayout1">
 
@@ -148,6 +159,7 @@
         android:layout_alignBottom="@+id/refreshImageView"
         android:layout_centerHorizontal="true"/>
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -155,9 +167,37 @@
         android:id="@+id/summaryLabel"
         android:textColor="#ffffc636"
         android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
+        android:layout_above="@+id/minutelyLabel"
+        />
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Minutely summary and on and on to force this to wrap at least one time"
+    android:id="@+id/minutelyLabel"
+    android:layout_above="@+id/houlyLabel"
+    android:layout_centerHorizontal="true"
+    android:textColor="@android:color/white"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hourly summary and on and on to force this to wrap at least one time"
+        android:id="@+id/houlyLabel"
+        android:layout_above="@+id/dailyLabel"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Daily summary and on and on to force this to wrap at least one time"
+        android:id="@+id/dailyLabel"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/iconImageView"
-        android:layout_toEndOf="@+id/iconImageView"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"/>
 
 </RelativeLayout>
