--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,11 @@
         android:layout_height="wrap_content"
         android:text="Wind ?mph from ###"
         android:id="@+id/windValue"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginTop="10dp"
         android:textSize="18sp"
         android:textColor="@android:color/white"
-        android:layout_alignBottom="@+id/temperatureLabel"
+        android:layout_below="@+id/temperatureLabel"
         android:layout_centerHorizontal="true"/>
 
     <ImageView
@@ -53,7 +53,7 @@
         android:layout_below="@+id/locationLabel"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:textColor="#80ffffff"
         android:textSize="18sp"/>
 
@@ -82,9 +82,9 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/temperatureLabel"
+        android:layout_below="@+id/windValue"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginTop="10dp"
         android:weightSum="100"
         android:id="@+id/linearLayout1">
@@ -174,7 +174,7 @@
         android:textColor="#ffffc636"
         android:textSize="18sp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/linearLayout1"
         android:layout_centerHorizontal="true"/>
@@ -185,31 +185,28 @@
     android:text="Minutely summary and on and on to force this to wrap at least one time"
     android:id="@+id/minutelyLabel"
     android:layout_above="@+id/houlyLabel"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:layout_centerHorizontal="true"
-    android:textColor="@android:color/white"/>
+    android:textColor="#a0ffffff"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hourly summary and on and on to force this to wrap at least one time"
         android:id="@+id/houlyLabel"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_above="@+id/dailyLabel"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white"/>
+        android:textColor="#80ffffff"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daily summary and on and on to force this to wrap at least one time"
         android:id="@+id/dailyLabel"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white"/>
+        android:textColor="#50ffffff"/>
 
 </RelativeLayout>
